syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/colin-mcl/stocks/pb";

message User {
    int32 id = 1;
    string username = 2;
    string email = 3;
    string firstName = 4;
    string lastName = 5;
    google.protobuf.Timestamp createdAt = 6;
}